# switchboard

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  ferb.toml  switchboard.toml
.github/workflows/: ci.yml  release.yml
crates/switchboard-adapters/discord-adapters/discord-channels/: Cargo.toml
crates/switchboard-adapters/discord-adapters/discord-channels/src/: lib.rs
crates/switchboard-adapters/github-adapters/github-issues/: Cargo.toml
crates/switchboard-adapters/github-adapters/github-issues/src/: lib.rs
crates/switchboard-adapters/jira-adapters/jira-issues/: Cargo.toml
crates/switchboard-adapters/jira-adapters/jira-issues/src/: lib.rs
crates/switchboard-adapters/klondike-adapters/klondike-artifacts/: Cargo.toml
crates/switchboard-adapters/klondike-adapters/klondike-artifacts/src/: lib.rs
crates/switchboard-adapters/klondike-adapters/klondike-artifacts/tests/: integration_test.rs
crates/switchboard-adapters/klondike-adapters/klondike-channels/: Cargo.toml
crates/switchboard-adapters/klondike-adapters/klondike-channels/src/: lib.rs
crates/switchboard-adapters/klondike-adapters/klondike-channels/tests/: integration_test.rs
crates/switchboard-adapters/klondike-adapters/klondike-issues/: Cargo.toml
crates/switchboard-adapters/klondike-adapters/klondike-issues/src/: lib.rs
crates/switchboard-adapters/klondike-adapters/klondike-issues/tests/: integration_test.rs
crates/switchboard-adapters/sharepoint-adapters/sharepoint-artifacts/: Cargo.toml
crates/switchboard-adapters/sharepoint-adapters/sharepoint-artifacts/src/: lib.rs
crates/switchboard-adapters/slack-adapters/slack-channels/: Cargo.toml
crates/switchboard-adapters/slack-adapters/slack-channels/src/: lib.rs
crates/switchboard-cli/: Cargo.toml
crates/switchboard-cli/src/: config_file.rs  main.rs
crates/switchboard-core/: Cargo.toml
crates/switchboard-core/src/: artifacts.rs  channels.rs  issues.rs  lib.rs  schema.rs
crates/switchboard-core/tests/: traits_test.rs
crates/switchboard-server/: Cargo.toml
crates/switchboard-server/src/: main.rs
crates/switchboard-server/src/routes/: artifacts.rs  channels.rs  issues.rs  mod.rs
crates/switchboard-server/tests/: api_test.rs  klondike_flow_test.rs
