[package]
name = "klondike-channels"
version = "0.1.7"
edition = "2021"

[dependencies]
switchboard-core = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = "1"

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
